backend/flask_output.log
Traceback (most recent call last):
  File "/usr/local/bin/flask", line 8, in <module>
    sys.exit(main())
  File "/usr/local/lib/python3.10/dist-packages/flask/cli.py", line 1064, in main
    cli.main()
  File "/usr/local/lib/python3.10/dist-packages/click/core.py", line 1078, in main
    rv = self.invoke(ctx)
  File "/usr/local/lib/python3.10/dist-packages/click/core.py", line 1688, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
  File "/usr/local/lib/python3.10/dist-packages/click/core.py", line 1434, in invoke
    return ctx.invoke(self.callback, **ctx.params)
  File "/usr/local/lib/python3.10/dist-packages/click/core.py", line 783, in invoke
    return __callback(*args, **kwargs)
  File "/usr/local/lib/python3.10/dist-packages/click/decorators.py", line 92, in new_func
    return ctx.invoke(f, obj, *args, **kwargs)
  File "/usr/local/lib/python3.10/dist-packages/click/core.py", line 783, in invoke
    return __callback(*args, **kwargs)
  File "/usr/local/lib/python3.10/dist-packages/flask/cli.py", line 912, in run_command
    raise e from None
  File "/usr/local/lib/python3.10/dist-packages/flask/cli.py", line 898, in run_command
    app = info.load_app()
  File "/usr/local/lib/python3.10/dist-packages/flask/cli.py", line 309, in load_app
    app = locate_app(import_name, name)
  File "/usr/local/lib/python3.10/dist-packages/flask/cli.py", line 219, in locate_app
    __import__(module_name)
  File "/tiktok_scraper/backend/app.py", line 57
    @app.route(/fetch_data, methods=[POST])
               ^
SyntaxError: invalid syntax
